@@ -22,6 +22,7 @@ convenience, here's a url to one of the relevant sections:
 
 -------------------------------------------------------------------------------
 * Language:
+  . new command @abbr for general abbreviations.
   . new command @slanted to typeset text with a slanted font.
 * Distribution:
   . new convenience script texi2pdf, equivalent to texi2dvi --pdf (from tetex).
